fix: improve vertical align and background gradient

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,18 +10,19 @@ html {
 	height: 100%;
 }
 
-html, body {
+body {
 	margin: 0;
 	padding: 0;
-}
-
-body {
-	/* font-family: system-ui, "Helvetica Neue", sans-serif; */
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 	line-height: 1.6;
 	color: #27363b;
 	/* background-image: linear-gradient(to top, #bdc2e8 0%, #bdc2e8 1%, #e6dee9 100%); */
 	background-image: linear-gradient(-20deg, #ed6ea0 0%, #ec8c69 100%);
+	background-attachment: fixed;
 }
 
 a {
@@ -40,9 +41,8 @@ CONTAINER
 ****/
 
 #container {
-	height: 100%;
 	width: 80%;
-	margin: 5em auto;
+	/* margin: 5em auto; */
 	display: grid;
 	grid-template-areas:
 		"header"
